<resources>
    <string name="app_name">Todo</string>

    <string name="welcome">Welcome!</string>
    <string name="signup_title">Create your account</string>
    <string name="login_title">Login your account</string>
    <string name="add_task_title">Add Task</string>
    <string name="home_title">Task List</string>
    <string name="task_title">Task Details</string>

    <string name="user_name_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="subject_label">Subject</string>
    <string name="description_label">Description</string>
    <string name="date_label">Select a date</string>
    <string name="start_time_label">Select start time</string>
    <string name="end_time_label">Select end time</string>

    <string name="forgot_password">Recover Account?</string>
    <string name="login_bottom_text">Don\'t have an account?</string>
    <string name="signup_bottom_text">Already a Member?</string>
    <string name="to_signup">Sign up </string>
    <string name="to_login">Login</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Update</string>
    <string name="button_Yes">Yes</string>
    <string name="button_No">No</string>

    <string name="signup_toast">Password does not match!</string>
    <string name="empty_field_toast">Required field cannot be empty</string>
    <string name="data_save_failed_toast">Data saving Failed!</string>
    <string name="signup_failed_toast">User registered Failed!</string>
    <string name="signup_success_toast">User registered successfully!</string>
    <string name="event_retrieve_failed_toast">Failed to retrieve events</string>
    <string name="login_failed_toast">Invalid username or password!</string>
    <string name="login_success_toast">Login successful!</string>
    <string name="user_not_toast">User name not found!</string>
    <string name="user_exists_toast">User name already exists!</string>
    <string name="invalid_date_toast">Selected date cannot be in the past.</string>
    <string name="invalid_time_toast">End time must be after start time.</string>
    <string name="task_save_toast">Task saved successfully!</string>
    <string name="task_save_error_toast">Task save failed!</string>
    <string name="task_update_toast">Task update successfully!</string>
    <string name="task_update_error_toast">Task update failed!</string>
    <string name="task_delete_toast">Task delete successfully!</string>
    <string name="task_delete_error_toast">Task delete failed!</string>

    <string name="un_save_title">Unsaved Data</string>
    <string name="save_data_title">Save Data</string>
    <string name="update_data_title">Update Data</string>
    <string name="delete_title">Delete Subscription</string>
    <string name="status_change_title">Mark as done</string>

    <string name="conform_massage_back">Are you sure you want to go back?</string>
    <string name="conform_massage_save">Are the details correct?</string>
    <string name="conform_massage_delete">Are you sure you want delete task?</string>
    <string name="conform_massage_status">Are you sure you want mark as done?</string>

    <string name="empty_massage">No tasks available.\nTap the \'+\' icon at the bottom to add a new task.</string>
</resources>